RESOLVED FIXED260202
(REGRESSION 262277@main) Incorrect float placement when clear is present
https://bugs.webkit.org/show_bug.cgi?id=260202
Summary (REGRESSION 262277@main) Incorrect float placement when clear is present
alan
Reported 2023-08-15 08:41:11 PDT
Attachments
Patch (7.00 KB, patch)
2023-08-15 08:48 PDT, alan
no flags
alan
Comment 1 2023-08-15 08:48:16 PDT
EWS
Comment 2 2023-08-15 10:40:03 PDT
Committed 266918@main (0c0259832cca): <https://commits.webkit.org/266918@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467281 [details].
Note You need to log in before you can comment on or make changes to this bug.