Cherry-pick 0c0259832cca. rdar://111577468

(REGRESSION 262277@main) Incorrect float placement when clear is present
    https://bugs.webkit.org/show_bug.cgi?id=260202
    <rdar://111577468>

    Reviewed by Antti Koivisto.

    When no float is present at the clear direction it still needs to "clear" the existing floats.

    e.g.

    <div style="float: left"></div>
    <div style="float: left; clear: right;"></div>

    (notice we are supposed to clear right, but there's no right float in this context)

    This patch ensures that we take existing floats into account for the initial position when there's nothing to clear.

    * LayoutTests/fast/block/float/float-left-with-clear-right-incorrect-position-expected.html: Added.
    * LayoutTests/fast/block/float/float-left-with-clear-right-incorrect-position.html: Added.
    * Source/WebCore/layout/floats/FloatingContext.cpp:
    (WebCore::Layout::FloatingContext::positionForFloat const):
    (WebCore::Layout::FloatingContext::bottom const):

    Canonical link: https://commits.webkit.org/266918@main

(cherry picked from commit 494bccac86ee6f585ff56138f28a99df19b7ec56)

Identifier: 265870.421@safari-7616-branch